--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div id="video-container">
-  <video [src]=data.homeVideoURL autoplay loop></video>
+  <video [src]=data.homeVideoURL autoplay loop muted></video>
 </div>
 <div id="line-separator"></div>
 <div id="start-button-container" (click)="redirect()">
