--- a/src/app/components/information-container/information-container.component.scss
+++ b/src/app/components/information-container/information-container.component.scss
@@ -34,6 +34,9 @@
     /deep/ a{
       text-decoration: none;
       color: dodgerblue;
+      &:hover{
+        color: #45b3ff;
+      }
     }
   }
 }
