--- a/src/app/shared/constants.scss
+++ b/src/app/shared/constants.scss
@@ -4,3 +4,8 @@ $NAV_BAR_HEIGHT: 15%;
 $DARK_GREY:#111;
 $OPEN_SANS: "Open Sans Condensed", sans-serif;
 $LATO: "Lato", sans-serif;
+$L_GREY1: #eee;
+$L_GREY2: #ddd;
+$L_GREY3: #ccc;
+$L_GREY4: #aaa;
+
