--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-nav-bar></app-nav-bar>
+<app-nav-bar id="header-menu"></app-nav-bar>
 <app-background></app-background>
 <router-outlet></router-outlet>
