--- a/src/app/components/docs/docs.component.html
+++ b/src/app/components/docs/docs.component.html
@@ -1,8 +1,191 @@
 <div id="docs-info-container">
-  <app-information-container [title]=dataService.docsTitle [content]=dataService.docsInformation></app-information-container>
+  <h1 id="documentation">DOCUMENTATION</h1> <br><br>
+  <p>This page should be viewed as a guidance for developers who wish to contribute to the project. It includes
+    information
+    regarding the architecture, overall structure, incorporated frameworks and libraries. </p><br><br><br><br><br>
+  <h2 #intro>INTRODUCTION</h2><br>
+  <p>The first stable of version of GTE was written in Flash. Due to the constantly changing web requirements, it has
+    been
+    rewritten as part of a dissertation project using modern HTML5 technologies, namely with <a
+      href="https://www.typescriptlang.org/">Typescript</a> and
+    <a href="https://phaser.io/">Phaser</a> - a 2D web-based game engine.<br><br>
+
+    Phaser provides great functionality for writing the core of the software with ease - built-in canvas for drawing,
+    input management, animations, signals and much more. The user interface, i.e. buttons, dialogs, windows are written
+    separately. In the dissertation, the UI was written with <a href="https://jquery.com/">jQuery</a>.
+    As the UI started to evolve it became clear that a
+    more sophisticated framework had to replace jQuery, in this case, the developers chose <a
+      href="https://angular.io/">Angular</a>.
+    <br><br>
+
+    Phaser GTE is incorporated into Angular as a plugin. Should the developers wish to rewrite or switch to another UI
+    framework like <a href="https://reactjs.org/">React</a>, <a href="https://vuejs.org/">Vue</a> or any other,
+    they can extract the existing core and place it into their own project with only slight modifications.<br><br>
+
+    The current version of Phaser is 2.11.0 CE (community edition). Version 3 of the game engine is available, but due
+    to a missing core feature (namely, applying tints to sprites in Canvas), GTE currently uses Phaser 2.x,
+    which will is still constantly updated by the community.<br><br>
+
+    In the dissertation, the Phaser core of the software was initially written with the
+    <a href="https://en.wikipedia.org/wiki/Model%E2%80%93view%E2%80%93controller">MVC design pattern</a>. In the
+    newer version, slight modifications were made and now the project strictly follows the
+    <a href="https://android.jlelse.eu/thoughts-on-clean-architecture-b8449d9d02df">CLEAN architecture</a>, while
+    still preserving the Model, View and Controller separation. For a detailed overview of the Phaser core architecture,
+    you can read the dissertation project.<br><br>
+
+    Tutorials on Phaser can be found online (an online course by the developer of GTE can be seen
+    <a href="https://www.youtube.com/watch?v=TUxpZr2Ekpg&list=PLRsPe93DnzPOrVx111HHMW0w4tXe0zdLb">here</a>),
+    but we strongly recommend looking at the <a href="https://phaser.io/examples">examples</a> and
+    <a href="https://phaser.io/docs/2.6.2/index">documentation</a> pages, as the
+    course focuses more on game development.<br><br>
+
+    The current version of Angular is 6. Google updates Angular twice a year, but usually the required modifications to
+    an
+    Angular project from version to version are minimal. Angular comes with a predefined architecture, which will be
+    briefly
+    discussed here. A good overview of this architecture can be seen in this
+    <a href="https://www.youtube.com/watch?v=svPlLuoTEaQ&t=55s">video</a>, or in the
+    <a href="https://angular.io/guide/architecture">official documentation</a>.
+    There are plenty of tutorials and examples written for Angular, but we recommend this 1 hour
+    <a href="https://www.youtube.com/watch?v=z4JUm0Bq9AM">introduction
+      video</a> and this <a href="https://www.youtube.com/watch?v=0eWrpsCLMJQ&list=PLC3y8-rFHvwhBRAgFinJR8KHIrCdTkZcZ">
+      tutorial series</a>. There is also a written <a href="https://angular.io/tutorial">tutorial</a> on angular.io,
+    but it is slightly harder to follow and learn from. Angular has a bit of a steep learning curve, so if you
+    do not have experience with it we strongly recommend checking some of the tutorials mentioned above, before
+    starting work on the project.<br><br>
+
+    There are other dependencies, such as <a href="https://www.npmjs.com/package/mathjs">mathjs</a>,
+    <a href="https://www.npmjs.com/package/file-saver">FileSaver.js</a> and
+    <a href="https://www.npmjs.com/package/angular2-draggable">angular2-draggable</a>,
+    but their usage in the software is minimal and could be rewritten from scratch or swapped with other libraries
+    relatively easily.<br><br>
+
+    For the most part GTE works as standalone project - it does not communicate with backend services to draw or operate
+    on game trees. One exception is the solver, which resides in a separate django project. The django backend service
+    is also responsible for this website.<br><br>
+
+    The developer's <a href="https://github.com/Martin-Antonov">github page</a> includes the current GTE software,
+    the dissertation version, this website and the backend service.
+    <br><br>
+
+    You can access the Flash version of GTE <a href="http://gte.csc.liv.ac.uk/gte/builder/">here</a>
+    and the dissertation version <a href="https://lse68123.github.io/">here</a>.</p><br><br>
+
+  <h2 #proj_str>PROJECT STRUCTURE & ARCHITECTURE</h2><br>
+  <p>In this section we will look at the design patterns used to create the project. As mentioned in the
+    introduction, the project consists of two parts - game trees drawing (with Phaser) and UI (with Angular).</p>
+  <br><br>
+  <h3 #angular>ANGULAR</h3><br>
+  <h4 #cli>COMMAND LINE INTERFACE</h4><br>
+  <p>Angular comes with a <a href="https://cli.angular.io/">Command Line Interface (CLI)</a> containing various
+    commands such as - creating a new project, serving a project, building a project, creating components, services
+    and so on. You can create a new project with the <span> > ng new [project-name] [options]</span> command.
+    Angular CLI creates a skeleton for development which includes all necessary configuration files and clear
+    structure for the developer to follow.<br><br>
+
+    We should note that Angular uses many external libraries, which are listed in the <span>package.json</span> file.
+    These external
+    libraries are never included in a github repository - they should be installed with the <span> > npm install</span>
+    command which
+    looks at the dependencies from the <span>package.json</span> file. By typing the command, npm creates a folder
+    called <span>node_modules</span>.
+    It includes all necessary external libraries for your project.<br><br>
+  </p><br><br>
+
+  <h4 #basics>BASICS</h4><br>
+  <p>Angular uses a component-based structure. Each component represents a single well-defined piece of the UI, e.g.
+    strategic form component, top menu component and solver window component. Every component has 3 main files - an
+    <span>HTML</span> markup file, a <span>CSS</span> styling file and a <span>TS</span> functionality file. The
+    additional
+    <span>spec.ts</span> file is used for testing purposes. Components can be grouped into modules, but,
+    since GTE is a single page application, all components reside in the <span>app-core</span> component.<br><br>
+
+    Services are responsible for receiving and delivering data to the related components via dependency injection.
+    For example, there is a solver service, which is responsible for sending the strategic form to a backend service,
+    receiving a solution as a response and delivering it to the respective component. Another important service is
+    described in the next paragraph.<br><br>
+
+    The UI communicates with the Phaser core via a class called <span>UserActionController.ts</span> (UAC). This class
+    is responsible
+    for all functionality, related to the creation, modification and presentation of game trees. The UI only needs to
+    have access to this class in order to control the behaviour of the tree on the screen. Most components need access
+    to this controller and so we have extracted a <span>user-action-controller-service</span>.<br><br>
+
+    One great advantage that comes with Angular services is two-way data-binding. This means that whenever a change
+    occurs in UAC, it is immediately detected by the UI. For example, the buttons on the left menu become active or
+    inactive, depending on the selected nodes. The project heavily relies on two-way data-binding, which greatly
+    simplifies the code.<br><br>
+  </p><br><br>
+
+  <h4 #overall_str>OVERALL STRUCTURE</h4><br><br>
+  <p>The project repository is essentially an Angular project. In the root folder there are various configuration files
+    for code styling options (<span>tslint.json</span>), npm (<span>package.json</span>) and ng commands
+    (<span>angular.json</span>), dependencies with other libraries and so on. These are generated by Angular CLI when
+    the project is initialized. The application code resides in the <span>/src</span> folder.
+    The <span>index.html</span> file contains the main parent component called <span>app-root</span>, which is
+    defined in the <span>/app</span> folder. The application starts from <span>main.ts</span>. The
+    <span>styles.css</span>
+    file is used for general styling. These files are also automatically generated by Angular CLI.<br><br><br><br>
+
+    The <span>/app</span> folder contains the parent <span>app-root</span> component along with folders containing our
+    own code. The file <span>app-root.html</span> contains the following components: <span>top-menu</span>,
+    <span>left-menu</span>, <span>right-menu</span>, <span>bottom-menu</span> and <span>gte-core</span>. Each of these
+    components resides in a separate folder and, if needed, there are subfolders containing child components.
+    The <span>gte-core</span> component contains a slightly modified Phaser GTE project.<br><br>
+
+    The <span>/services</span> folder contains all services used in the application. There are 5 services: </p><br>
+  <ol>
+    <li>UAC service</li>
+    <li>Solver service, which sends a request to the backend and receives a solution.</li>
+    <li>Tooltips service, which is responsible for the tooltips texts when hovering elements.</li>
+    <li>Trees-file service, which handles the bottom menu file structure when creating, saving and loading trees.
+    </li>
+    <li>UI-settings service currently tracks which of the Strategic form, Matrix Input and Solver windows are
+      currently
+      active. Should there be any more UI settings, they can be added to this service. If there are settings related to
+      the trees and the way they are drawn, there is a separate class inside gte-core which handles this functionality.
+    </li>
+  </ol>
+  <br><br>
+  <p>
+    The <span>/shared</span> folder contains abstracted css styling functions and colour schemes along with reusable
+    components.
+    For example, a clickable button with a tooltip can be reused in many other components.
+  </p><br><br>
+  <h3 #phaser_core>PHASER GTE CORE</h3><br>
+  <p>As mentioned in the Introduction, the dissertation version of Phaser has been modified to incorporate the CLEAN
+    architecture. In simple terms, different parts of the code are layered, where each outer layer is “allowed”
+    access to all inner layers, but inner layers are not “allowed” access to outer layers. This architecture avoids
+    circular dependencies and coupling between classes.<br><br>
+
+    In GTE, we still keep the original MVC structure, but the Model, View and Controller modules are now layered.
+    In the diagram below, we see that the Model is the innermost layer - it is only concerned with the data and
+    corresponding functionality. It should not be coupled with other parts of the code. The View uses the Model to
+    visualize the data. The Controller initializes the View and the Model and performs actions based on user
+    interaction.
+    We should note that no inner layer has knowledge of the outer layers. In this example, the Model is unaware of the
+    View and the Controller, and the View is unaware of the Controller.<br><br>
+
+    The same architecture is also applied within the above-mentioned layers. For example, taking the various
+    controller classes, we can create a similar diagram.<br><br>
+
+    We should note that the Model layer does not follow this architecture due performance optimizations.<br><br>
+
+    A detailed explanation on the MVC architecture, the various classes, the communication between classes and, in
+    general, the implementation of Phaser GTE can be found in the dissertation project
+    <a href="https://drive.google.com/file/d/0B1qR_aQJgeLsbmhwNVIzcXE1MDQ/view">here</a>.<br><br>
+  </p><br><br>
+
 </div>
 <div id="docs-menu-container">
-  <app-docs-menu *ngIf="dataService.docsMenu">
-  </app-docs-menu>
+  <ul>
+    <li class="tabx1" (click)="this.scrollSmooth(intro)">Introduction</li>
+    <li class="tabx1" (click)="this.scrollSmooth(proj_str)">Project Structure & Architecture</li>
+    <li class="tabx2" (click)="this.scrollSmooth(angular)">Angular</li>
+    <li class="tabx3" (click)="this.scrollSmooth(cli)">CLI</li>
+    <li class="tabx3" (click)="this.scrollSmooth(basics)">Basics</li>
+    <li class="tabx3" (click)="this.scrollSmooth(overall_str)">Overall Structure</li>
+    <li class="tabx2" (click)="this.scrollSmooth(phaser_core)">Phaser GTE Core</li>
+  </ul>
 </div>
 
