--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -10,71 +10,72 @@
   width: 100%;
   height: $NAV_BAR_HEIGHT;
   z-index: 2;
-}
+  transition:0.2s;
 
-#menu {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  color: white;
-
-  ul {
-    list-style: none;
-    height: 100%;
-    width: 40%;
-    font-family: $OPEN_SANS;
-    font-weight: bolder;
-    font-size: 2em;
-  }
-
-  #logo-container {
+  #menu {
     position: absolute;
-    @include center(true, false);
+    width: 100%;
     height: 100%;
-    width: 15%;
-    &:hover {
-      cursor: pointer;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    color: white;
+    ul {
+      list-style: none;
+      height: 100%;
+      width: 40%;
+      font-family: $OPEN_SANS;
+      font-weight: bolder;
+      font-size: 2em;
     }
-    #logo {
+
+    #logo-container {
       position: absolute;
       @include center(true, true);
-      max-width: 100%;
-      max-height: 100%;
+      height: 60%;
+      width: 15%;
+      &:hover {
+        cursor: pointer;
+      }
+      #logo {
+        position: absolute;
+        @include center(true, true);
+        max-width: 100%;
+        max-height: 100%;
+      }
+    }
+    #right-menu {
+      display: flex;
+      flex-wrap: nowrap;
+      align-items: center;
+      float: right;
+      position: relative;
+      justify-content: flex-start;
+      li {
+        &:hover {
+        }
+        cursor: pointer;
+      }
     }
   }
-  #right-menu {
+
+  #left-menu {
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
-    float: right;
+    float: left;
     position: relative;
-    justify-content: flex-start;
+    justify-content: flex-end;
+
     li {
       &:hover {
+        cursor: pointer;
       }
-      cursor: pointer;
     }
   }
 }
 
-#left-menu {
-  display: flex;
-  flex-wrap: nowrap;
-  align-items: center;
-  float: left;
-  position: relative;
-  justify-content: flex-end;
-
-  li {
-    &:hover {
-      cursor: pointer;
-    }
-  }
-}
 
 
 
