--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,14 @@
 @import "app/shared/mixins";
+@import "app/shared/constants";
 * {
   margin: 0;
   padding: 0;
   :focus{
     outline:0;
   }
-  overflow:hidden;
+  body{
+    background-color: black;
+  }
+  //overflow:hidden;
 }
 
